belajar/template/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nama-pod
  namespace: letak-namespace
spec:
  container:
    - name: nama-container
      image: nginx
      ports:
        - containerPort: 80
