belajar/template/template-env-var-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "pod name:"
  labels:
    label-1: value-1
    label-2: value-2
    label-3: value-3
spec:
  containers:
    - name: "container name"
      image: "image name"
      ports:
        - containerPort: "value"
