belajar/template/template-prob.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-name
  labels:
      label-key1: label-value1
  annotations:
      annotation-key1: annotation-value
      annotation-key2: very long ann
spec:
  containers:
      - name: container-name
        image: image-name
        ports:
          - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /
            port: 80
         initialDelaySeconds: 0
         periodSeconds: 10
         timeoutSeconds: 1 
         successThreshold: 1
         failureThreshold: 3
