belajar/template/template-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-name
  labels:
    label-key1: label-value1
    label-key2: label-value2
    label-key3: label-value3
spec:
  volume:
  - name:  name-volume
    emptyDir: {}
  containers:
    - name: container-name
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /app/volume
          name: name-volume
