belajar/template/template.resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-resource
  labels:
    label-key: label-value
spec: 
   volumes:
     - name: volume-name
       emptyDir: {}
   containers:
     - name: container-name
       image: image-name
       ports:
         - containerPort: 80
       resource:
         requests:
           # milicore
           cpu: 100m
           # mebibytes
           memory: 25Mi
         limits:
           
           cpu: 20m
 
           memory: 50Mi
