belajar/template/template-domain-externalservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-domain
  labels:
   label-key: label-value
spec:
  Type: ExternalName
  externalName: example.com
  ports:
  - port: 80
