belajar/template/template-endpoint-externalService.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  labels:
    label-key: label-value
spec:
  ports:
    - port: 80
    
---

apiVersion: v1
kind: Endpoints
metadata:
  name: service-name
  labels:
    label-key: label-value
subnet:
- addresses:
    - ip: 11.11.11.11
    - ip: 22.22.22.22
  ports:
  - port: 80
