belajar/template/template-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-name
spec:
  selector:
    key: value1
  ports:
  - port: 8080
    targetPort: 80
