belajar/template/template-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress 
metadata:
  name:  ingress-name
  labels:
    label-key: label-value
spec:
  rules:
  - host: sub.domain.com
    http:
      paths:
          - path: /
            backend:
              serviceName: service-name
              servicePort: 80
