belajar/template/template.ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-name
  labels:
    label-key: label-value
spec:
  rules:
  - host: nama.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-name
            port: 
              number: 80
